@@ -2,6 +2,8 @@
     Multisite:
     * FIX: allow web plugins to be byte compiled (*.pyc). Those
       are preferred over *.py if existing
+    * View Editor: Fixed jump to top of the page after moving painters during
+      editing views
 
 1.2.0b2:
     Core:
